--- a/index.html
+++ b/index.html
@@ -425,7 +425,6 @@
                     <li id="label-network" class="dropdown-header"></li>
                     <li>
                         <div class="progress progress-sm progress-bar-segmented">
-                            {#redirect, appCache, dns, tcp#}
                             <div id="progress-redirect" class="progress-redirect progress-bar progress-bar-danger"></div>
                             <div class="progress-appCache progress-bar progress-bar-danger progress-bar-translucent"></div>
                             <div class="progress-dns progress-bar progress-bar-danger progress-bar-translucent"></div>
@@ -437,7 +436,6 @@
                     </li>
                     <li>
                         <div class="progress progress-sm progress-bar-segmented">
-                            {#redirect, appCache, dns, tcp#}
                             <div class="progress-redirect progress-bar progress-bar-danger progress-bar-translucent"></div>
                             <div id="progress-appCache" class="progress-appCache progress-bar progress-bar-danger"></div>
                             <div class="progress-dns progress-bar progress-bar-danger progress-bar-translucent"></div>
@@ -449,7 +447,6 @@
                     </li>
                     <li>
                         <div class="progress progress-sm progress-bar-segmented">
-                            {#redirect, appCache, dns, tcp#}
                             <div class="progress-redirect progress-bar progress-bar-danger progress-bar-translucent"></div>
                             <div class="progress-appCache progress-bar progress-bar-danger progress-bar-translucent"></div>
                             <div id="progress-dns" class="progress-dns progress-bar progress-bar-danger"></div>
@@ -461,7 +458,6 @@
                     </li>
                     <li>
                         <div class="progress progress-sm progress-bar-segmented">
-                            {#redirect, appCache, dns, tcp#}
                             <div class="progress-redirect progress-bar progress-bar-danger progress-bar-translucent"></div>
                             <div class="progress-appCache progress-bar progress-bar-danger progress-bar-translucent"></div>
                             <div class="progress-dns progress-bar progress-bar-danger progress-bar-translucent"></div>
@@ -533,7 +529,7 @@
         <h3 class="text-muted">Project name</h3>
     </div>
 
-    <img src="http://placehold.it/350x150?text={{ "now"|date("F jS \\a\\t g:ia") }}">
+    <img src="http://placehold.it/350x150?text=meow">
 
     <div class="jumbotron">
         <h1>Jumbotron heading</h1>
